# full_auth_service_testfork

./: README.md  clues_for_me.txt  config.py  docker-compose.yml  for me.txt  main.py  main_auth.py  main_back.py  pyproject.toml  requirements.txt
auth_folder/: Dockerfile  config.py  main_auth.py  middleware_auth.py  requirements.txt  routes_8000.py  routes_8001.py  test_app.py
auth_folder/database/: fake_db.py
auth_folder/dependencies/: auth_depends.py
auth_folder/models/: user.py
auth_folder/routers/: routes_8001.py
backend_folder/: Dockerfile  main_back.py  requirements.txt
query_folder/: Dockerfile  main_query.py  query_config.py  query_crud.py  query_database.py  query_models.py  query_router.py  query_schemas.py  requirements.txt
routers/: routes_8001.py
services/: user_service.py
